# imu-tools

./: .gitignore  .markdownlintrc  .pylintrc  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
arduino/: ble.ino
blender/: motion.py
config/: network.ini.tmpl
imu_tools/: __init__.py  control.py  pub.py  sub.py
npm-package/: .gitignore  README.md  index.js  mqtt-subscription.js  package-lock.json  package.json  utils.js
npm-package/example/: index.html
pyboard/: .pylintrc  ble.py  bno055.py  bno055_fake.py  boot.py  config.py.tmpl  jsonb.py  main.py  sensors.py  ufunctools.py  webserver.py
scripts/: ble-sub.ts  ble2mqtt.ts  config.py  config.py.tmpl  esp-screen  flash  mqtt-control  mqtt-pub  mqtt-sub  mqtt2pipe  mqtt_imu_sub  mqtt_pub  mqtt_sub  put-files  py-download  py-repl  read-serial-samples  repl  sample-rate  serial-term  simulate  webserver
src/: adafruit_bno055.py  bno055.py  bno055_fake.py  boot.py  config.py.tmpl  functools.py  main.py  umqtt.py
test/: mqtt_imu_sub.py  mqtt_pub.py  mqtt_sub.py  test-bno055.py
web/: .prettierrc  3d-model.html  3d-model.js  barchart.html  barchart.js  ble.html  btle.html  chart.html  chart.js  d3-graph.html  d3-graph.js  highcharts-chart.html  highcharts-chart.js  index.html  index.js  model.html  sensor-client.js  sketch.js  styles.css  utils.js
web/js/: 3d-model.js  barchart.js  ble-client.js  ble.js  d3-graph.js  dashboard.js  highcharts-chart.js  imu-connection.js  index.js  mqtt-client.js  sensor-client.js  sensor-encoding.js  utils.js
