[tool.poetry]
name = "imu-tools"
version = "0.1.0"
description = "Command-line tools for using an IMU connected to MQTT"
authors = ["Oliver Steele <steele@osteele.com>"]
license = "MIT"

[tool.poetry.scripts]
pub = "imu_tools:pub"
sub = "imu_tools:sub"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
loguru = "^0.4.0"
paho-mqtt = "^1.5"
pyserial = "^3.4"
rshell = "^0.0.26"
esptool = "^2.8"

[tool.poetry.dev-dependencies]
isort = "^4.3"
pylint-common = "^0.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
